--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -525,3 +525,6 @@ subsystem mem_buf_vm
 
 #power_state device node
 /dev/power_state           0660   system      system
+
+# Charger
+/sys/class/power_supply/battery  battery_charging_enabled  0660  system  system
