--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -105,10 +105,10 @@ service vendor.qseecomd /vendor/bin/qseecomd
 service thermal-engine /vendor/bin/thermal-engine
    class main
    user root
-   socket thermal-send-client stream 0666 system system
-   socket thermal-recv-client stream 0660 system system
-   socket thermal-recv-passive-client stream 0666 system system
-   socket thermal-send-rule stream 0660 system system
+   socket thermal-send-client stream 0660 system oem_2907
+   socket thermal-recv-client stream 0660 system oem_2907
+   socket thermal-recv-passive-client stream 0660 system oem_2907
+   socket thermal-send-rule stream 0660 system oem_2907
    group root
    writepid /dev/cpuset/system-background/tasks
 
