--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -44,6 +44,25 @@
             android:authorities="${applicationId}.androidx-startup"
             tools:replace="android:authorities"/>
 
+        <activity
+            android:name=".dolby.DolbyActivity"
+            android:exported="false"
+            android:label="@string/dolby_title"
+            android:theme="@style/Theme.SubSettingsBase">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.media.action.DISPLAY_AUDIO_EFFECT_CONTROL_PANEL" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.CATEGORY_CONTENT_MUSIC" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.sound" />
+            <meta-data android:name="com.android.settings.summary_uri"
+                       android:value="content://org.lineageos.settings.device.summary/dolby" />
+        </activity>
+
         <service android:name=".doze.DozeService"
                  android:permission="XiaomiDozeService">
         </service>
