--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -52,7 +52,7 @@ on init
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
     # ZRAM setup
-    write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/comp_algorithm zstd
     write /proc/sys/vm/page-cluster 0
     write /proc/sys/vm/swappiness 60
 
